l10n: fix a couple of typos in .lang files
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103487 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/csb/newsletter.lang
+++ b/csb/newsletter.lang
@@ -113,8 +113,8 @@ Zdrëszëjmë sã!
 Firefoksa jidze téż nalezc na Twòjich ùlubionëch pòrtalach spòlëznowëch. Sparłãczë sã z nama ë przëłączë do òbgôdczi.
 
 
-;Manage your <span>Newsletter Subscriptions
-Manage your <span>Newsletter Subscriptions
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Subscribe
 Unsubscribe
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Check here if you’d like to be removed from all Mozilla emails'
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
