--- a/da/newsletter.lang
+++ b/da/newsletter.lang
@@ -113,8 +113,8 @@ Lad os være venner!
 Firefox er også på dine foretrukne sociale netværkssteder. Slut dig til os og deltag i samtalen.
 
 
-;Manage your <span>Newsletter Subscriptions
-Administrer dine <span>abonnementer på nyhedsbreve
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Abonner
 Afmeld abonnement
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Sæt flueben her, hvis du vil afmeldes alle Mozillas mails
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
