--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -113,8 +113,8 @@ Lass’ uns Freunde sein!
 Firefox ist auch auf Ihren sozialen Lieblingsnetzwerken. Setzen Sie sich mit uns in Verbindung und diskutieren Sie mit.
 
 
-;Manage your <span>Newsletter Subscriptions
-Verwalten Sie Ihre <span>Newsletter-Abonnements
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Abonnieren
 Abonnement entfernen
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Aktivieren Sie dieses Kontrollkästchen, um Sie aus allen Mozilla-E-Mail-Listen auszutragen
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
