--- a/eo/newsletter.lang
+++ b/eo/newsletter.lang
@@ -113,8 +113,8 @@ Ni amikiĝu!
 Firefox troveblas ankaŭ en viaj plej ŝatataj sociaj retejoj.  Kontaktu nin kaj aliĝu al la babilado.
 
 
-;Manage your <span>Newsletter Subscriptions
-Administri viajn <span>abonojn al novaĵleteroj
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Aboni
 Malaboni
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Marku tie ĉi se vi ŝatus ne plu ricevi retmesaĝojn de Mozilla
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
