--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -113,8 +113,8 @@ Deventémmo Amîxi!
 O Firefox o l'é ascì o nòstro scîto de social network. Conétite con niâtri e unìscite a-a conversaçión.
 
 
-;Manage your <span>Newsletter Subscriptions
-Gestìsci e teu <span>Iscriçioìn a-e Newsletter
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Iscrîvime
 Scancéllime
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Contròlla chi se t'eu scancelâte da tùtte e email do Mozilla
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
