--- a/ru/newsletter.lang
+++ b/ru/newsletter.lang
@@ -113,8 +113,8 @@ Firefox и Вы
 Firefox также можно найти в ваших любимых социальных сетях. Свяжитесь с нами и присоединяйтесь к дискуссиям.
 
 
-;Manage your <span>Newsletter Subscriptions
-Управление вашими <span>подписками на новости
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Firefox также можно найти в ваших любимых социа
 Отписаться
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Щёлкните здесь, если вы хотите отписаться от всех рассылок Mozilla
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
