--- a/sl/newsletter.lang
+++ b/sl/newsletter.lang
@@ -113,8 +113,8 @@ Postanimo prijatelji!
 Firefox je tudi eno od vaših priljubljenih družabnih spletnih mest. Pridružite se nam pri klepetu.
 
 
-;Manage your <span>Newsletter Subscriptions
-Urejajte svoje <span>naročnine na biltene
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Prijava za naročnino
 Odjava naročnine
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Check here if you’d like to be removed from all Mozilla emails'
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
