--- a/cs/newsletter.lang
+++ b/cs/newsletter.lang
@@ -113,8 +113,8 @@ Let’s Be Friends!
 Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
-;Manage your <span>Newsletter Subscriptions
-Správa <span>odběru zpravodajů
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Přihlásit
 Odhlásit
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Zaškrtněte, pokud chcete, aby byly zrušeny všechny odběry e-mailů od Mozilly
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
