--- a/el/newsletter.lang
+++ b/el/newsletter.lang
@@ -113,8 +113,8 @@ Firefox για κινητά
 Η ομάδα του Firefox βρίσκεται και στα αγαπημένα σας κοινωνικά δίκτυα. Συνδεθείτε μαζί μας και συμμετέχετε στις συζητήσεις.
 
 
-;Manage your <span>Newsletter Subscriptions
-Διαχείριση <span>συνδρομών
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Firefox για κινητά
 Διαγραφή
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Επιλέξτε το αν θέλετε να διαγράψετε τη συνδρομή σας από όλα τα δελτία νέων του Mozilla
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
