--- a/en-GB/newsletter.lang
+++ b/en-GB/newsletter.lang
@@ -101,8 +101,8 @@ Let’s Be Friends!
 Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
 
 
-;Manage your <span>Newsletter Subscriptions
-Manage your <span>Newsletter Subscriptions
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -113,8 +113,8 @@ Subscribe
 Unsubscribe
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Check here if you’d like to be removed from all Mozilla emails'
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
