--- a/es-AR/newsletter.lang
+++ b/es-AR/newsletter.lang
@@ -113,8 +113,8 @@ Lee acerca de las últimas funcionalidades para Firefox antes de su salida final
 Firefox también está en tus redes sociales favoritas. Conectate con nosotros y unite a la conversación.
 
 
-;Manage your <span>Newsletter Subscriptions
-Administrá tus <span>suscripciones a los boletínes
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Suscribite
 Desuscribite
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Aceptá acá si querés ser removido de los correos de Mozilla
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
