--- a/es-ES/newsletter.lang
+++ b/es-ES/newsletter.lang
@@ -113,8 +113,8 @@ Lee todo acerca de las últimas características en Firefox para escritorio y di
 Firefox está también en tus redes sociales favoritas. Conecta con nosotros y únete a la conversación.
 
 
-;Manage your <span>Newsletter Subscriptions
-Manage your <span>Newsletter Subscriptions
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Subscribe
 Unsubscribe
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Check here if you’d like to be removed from all Mozilla emails'
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
