--- a/ff/newsletter.lang
+++ b/ff/newsletter.lang
@@ -113,8 +113,8 @@ En kalfondirii koye men!
 Firefox ena woni kadi e lowe maa laylayte renndo ɓurɗe labeede. Seŋo e amen ngam naatde e yeewtere ndee.
 
 
-;Manage your <span>Newsletter Subscriptions
-Manage your <span>Newsletter Subscriptions
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Subscribe
 Unsubscribe
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Check here if you’d like to be removed from all Mozilla emails'
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
