--- a/hr/newsletter.lang
+++ b/hr/newsletter.lang
@@ -113,8 +113,8 @@ Budimo prijatelji!
 Firefox je prisutan i na vašim omiljenim društvenim mrežama. Povežite se s nama i pridružite se raspravama.
 
 
-;Manage your <span>Newsletter Subscriptions
-Upravljajte svojim <span>newsletter pretplatama
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Pretplata
 Odjava
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Označite ako više ne želite primati Mozillinu e-poštu
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
