--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -113,8 +113,8 @@ Legyünk barátok!
 A Firefox megtalálható a legtöbb közösségi oldalon. Csatlakozzon hozzánk.
 
 
-;Manage your <span>Newsletter Subscriptions
-;Feliratkozások <span>kezelése
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Feliratkozás
 Lemondás
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Válassza ezt, ha minden Mozilla e-mailről le szeretne iratkozni
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
