--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -113,8 +113,8 @@ Firefox-ը և դուք
 Firefox-ը նաև Ձեր սիրելի սոցիալական կայքերում է։ Միացե՛ք մեզ և մասնակցեք քննարկումներին։
 
 
-;Manage your <span>Newsletter Subscriptions
-Կառավարեք Ձեր <span>Նորությունների Բաժանորդագրությունները
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Firefox-ը նաև Ձեր սիրելի սոցիալական կայքերում է
 Ապաբաժանորդագրվել
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Սեղմեք այստեղ, եթե չեք ցանկանում ստանալ նամակներ Mozilla-ից'
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
