--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -113,8 +113,8 @@ Verum vinir!
 Firefox er einnig á félagsnetum. Kíktu á okkur og taktu þátt í samræðunum.
 
 
-;Manage your <span>Newsletter Subscriptions
-Sýsla með <span>áskrift að fréttabréfum
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Gerast áskrifandi
 Hætta í áskrift
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Hakaðu hér við ef þú vilt ekki fá neinn póst frá Mozilla
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
