--- a/nl/newsletter.lang
+++ b/nl/newsletter.lang
@@ -113,8 +113,8 @@ Laten we vrienden worden!
 Firefox bevindt zich ook op uw favoriete sociale netwerken. Maak verbinding met ons en doe mee met de conversatie.
 
 
-;Manage your <span>Newsletter Subscriptions
-Beheer uw <span>nieuwsbriefinschrijvingen
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Abonneren
 Uitschrijven
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Kijk hier als u van alle e-mailberichten van Mozilla wilt worden verwijderd
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
