--- a/sv-SE/newsletter.lang
+++ b/sv-SE/newsletter.lang
@@ -113,8 +113,8 @@ Låt oss vara vänner!
 Firefox finns också på dina favoritwebbplatser för sociala nätverk. Anslut dig och delta i samtalet.
 
 
-;Manage your <span>Newsletter Subscriptions
-Hantera dina <span>nyhetsbrevsprenumerationer
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Prenumerera
 Avsluta prenumeration
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Kryssa i den här rutan om du vill tas bort från alla Mozillas e-postlistor
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
