--- a/zh-TW/newsletter.lang
+++ b/zh-TW/newsletter.lang
@@ -113,8 +113,8 @@ Beta 新聞
 Firefox 也在您最愛的社群網站出沒，跟我們一起聊聊吧。
 
 
-;Manage your <span>Newsletter Subscriptions
-管理您所 <span>訂閱的電子報
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Firefox 也在您最愛的社群網站出沒，跟我們一起聊聊吧。
 退訂
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-若您不想再收到任何 Mozilla 的電子郵件，請點這裡
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
