l10n: add a new about:home snippet to .lang files to promote sync (Bug 737947)
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103489 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ach/snippets.lang
+++ b/ach/snippets.lang
@@ -117,3 +117,7 @@ Help make the next version of Firefox even more awesome. <a href="%">Become an A
 Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
