--- a/ast/snippets.lang
+++ b/ast/snippets.lang
@@ -115,3 +115,9 @@ Fai que la próxima versión de Firefox seya inclusu más ablucante. <a href="%"
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 Invita a los tos collacios a que vean les carauterístique que va tener Firefox nel futuru. <a href="%">Conviértite en simpatizante</a> y comparte Firefox Aurora güei mesmo.
+
+
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
