--- a/br/snippets.lang
+++ b/br/snippets.lang
@@ -117,3 +117,7 @@ Roit skoazell lakaat handelv a zeu Firefox da vezañ dreistordinaloc'h c'hoazh. 
 Pedit mignoned da zizoleiñ keweriusterioù a zeu Firefox. <a href="%">Deuit da vezañ kenezel</a> ha rannit Firefox hiziv.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
