--- a/bs/snippets.lang
+++ b/bs/snippets.lang
@@ -117,6 +117,10 @@ Pomozite da učinimo narednu verziju Firefoxa još boljom. <a href="%">Postanite
 Pozovite prijatelje da vide nadolazeće mogućnosti Firefoxa. <a href="%">Postanite Affiliate</a> i podijelite Firefox Auroru još danas.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Pretražujte Tweetove, prijatelje ili aktuelne teme direktno iz trake za pretragu. Kliknite na ikonicu za pretragu u gornjem desnom uglu Firefoxa i izaberite Twitter.
 
