--- a/ca/snippets.lang
+++ b/ca/snippets.lang
@@ -117,3 +117,7 @@ Ajudeu a fer la propera versió del Firefox encara més fantàstica. <a href="%"
 Convideu amics a fer un tast de les properes funcions del Firefox. <a href="%">Feu-ne promoció</a> i compartiu el Firefox Aurora avui.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
