--- a/da/snippets.lang
+++ b/da/snippets.lang
@@ -115,3 +115,9 @@ Få flere til at hjælpe os med at forbedre Firefox, og <a href="%">del Firefox<
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 Inviter venner til at se de kommende funktioner i Firefox, og <a href="%">del Firefox Aurora</a> i dag.
+
+
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
