--- a/el/snippets.lang
+++ b/el/snippets.lang
@@ -117,3 +117,7 @@
 Καλέστε φίλους να δουν από τώρα τα επερχόμενα χαρακτηριστικά του επόμενου Firefox. <a href="%">Συμμετέχετε στο πρόγραμμα affiliates</a> και διαδώστε τώρα τον Firefox Aurora.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
