--- a/et/snippets.lang
+++ b/et/snippets.lang
@@ -117,3 +117,7 @@ Aita Firefoxi järgmist versiooni veelgi ägedamaks muuta. <a href="%">Hakka mei
 Kutsu sõbrad Firefoxi tulevasi võimalusi vaatama. <a href="%">Hakka meie partneriks</a> ning jaga Firefox Aurora't juba täna.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
