--- a/ff/snippets.lang
+++ b/ff/snippets.lang
@@ -117,3 +117,7 @@ Wallu-min waɗde yamre Firefox aroore yamre yuɓɓunde. <a href="%">Yantu e Goll
 Bismo musidɓe maa yoo ngar njiya fannuuji Firefox garooji. <a href="%">Yantu e Gollodiiɓe</a> wostondireede baɗte Firefox Aurora hannde.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
