--- a/gd/snippets.lang
+++ b/gd/snippets.lang
@@ -117,3 +117,7 @@ Cuidich leinn gus am bi an ath Firefox fiù nas gasta. <a href="%">Faidh ballrac
 Thoir cuireadh dha do charaidean ach am faic iad na bhios san ath Firefox. <a href="%">Faidh ballrachd cleamhnaiche</a> is co-roinn Firefox Beta an-diugh.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
