--- a/hr/snippets.lang
+++ b/hr/snippets.lang
@@ -117,6 +117,10 @@ Pomognite nam učiniti iduću inačicu Firefoxa još boljom. <a href="%">Postani
 Pozovite prijatelje na isprobavanje najnovijih mogućnosti u Firefoxu. <a href="%">Postanite Affiliate član</a> i podijelite Firefox Aurora danas.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Tražite tweetove, prijatelje ili popularne teme izravno iz polja za pretragu. Kliknite na ikonu pretraživača u gornjem desnom dijelu Firefoxa i odaberite Twitter.
 
