--- a/hu/snippets.lang
+++ b/hu/snippets.lang
@@ -88,6 +88,7 @@ Töltse le a Firefox böngészőt az Android táblagépre és érezze kezei köz
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
 Tesztelje az új funkciókat és segítsen, hogy a következő verzió az eddigi legjobb legyen. <a href="%">Töltse le a Firefox Beta verziót!</a>
 
+
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
 Szereti a Firefoxot? Segíteni szeretne, hogy a következő verzió még jobb legyen? <a href="%">Töltse le a Firefox Beta verziót</a> és mondja el róla véleményét!
 
@@ -114,5 +115,9 @@ Segítsen, hogy a következő Firefox verzió még fantasztikusabb legyen. <a hr
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 Hívja meg barátait, hogy megnézhessék az új funkciókat. <a href="%">Legyen a Firefox barátja</a> és ossza meg másokkal a Firefox Aurora verziót.
+
+
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
