--- a/is/snippets.lang
+++ b/is/snippets.lang
@@ -116,3 +116,8 @@ Hjálpaðu okkur við að gera næstu útgáfu af Firefox ennþá betri. <a href
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 Bjóddu vinum þínum að forskoða næstu hluti í Firefox. <a href="%">Taktu þátt</a> og deildu Firefox með öðrum.
 
+
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
