--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -117,3 +117,7 @@ Agiùttine a fâ a pròscima versción ancón ciù bélla. <a href="%">Devénta 
 Invîta i amîxi a védde in antìçipo i megiorménte do Firefox. <a href="%">Devénta 'n sòccio</a> e condivìddi o Firefox Aurora ancheu.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
