--- a/mr/snippets.lang
+++ b/mr/snippets.lang
@@ -117,3 +117,7 @@
 येणाऱ्या फायफॉक्समधील गुणविशेषांच्या पूर्वावलोकनसाठी मित्रांना आमांत्रीत करा. <a href="%">संलग्न व्हा</a> व आजच फायरफॉक्स अरोरा शेअर करा.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
