--- a/nl/snippets.lang
+++ b/nl/snippets.lang
@@ -1,5 +1,6 @@
 # these text snippets are mostly used on about:home
 
+
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Neem Firefox overal mee naartoe! De nieuwste Firefox voor Android staat voor u klaar. <a href="%s">Download hem nu.</a>
 
@@ -116,7 +117,11 @@ Help de volgende versie van Firefox nog geweldiger te maken. <a href="%">Word ee
 Vraag vrienden om komende functies in Firefox te bekijken. <a href="%">Word een partner</a> en deel Firefox Aurora meteen.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Mooie prijzen! Hollywood-juryleden! Uitroeptekens! <a href="%">Doe mee met Firefox Flicks</a>, de wereldwijde videowedstrijd die ons verhaal vertelt, of stem op uw favorieten!
+
 
