--- a/pa-IN/snippets.lang
+++ b/pa-IN/snippets.lang
@@ -117,3 +117,7 @@ Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us 
 ਆਪਣੇ ਦੋਸਤਾਂ ਨੂੰ ਫਾਇਰਫਾਕਸ ਦੇ ਨਵੇਂ ਫੀਚਰ ਵਰਤਣ ਲਈ ਸੱਦਾ ਦਿਉ। <a href="%">ਸਬੰਧ ਬਣਾਉ</a> ਅਤੇ ਫਾਇਰਫਾਕਸ ਅਰੋਰਾ ਨੂੰ ਅੱਜ ਹੀ ਸਾਂਝਾ ਕਰੋ।
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
