--- a/pt-BR/snippets.lang
+++ b/pt-BR/snippets.lang
@@ -1,95 +1,131 @@
 # these text snippets are mostly used on about:home
 
+
 ;Take Firefox anywhere you go! The latest Firefox for Android is live and ready for you to enjoy. <a href="%s">Get it now</a>.
 Leve o Firefox com você! A versão mais recente do Firefox para Android está disponível e pronta para ser aproveitada. <a href="%s">Baixe já</a>.
+
 
 ;Now that you've got the latest version, <a href="%s">learn about all the cool things</a> you can do with your Firefox.
 Agora que você já tem a versão mais recente, <a href="%s">aprenda mais sobre as coisas legais</a> que você pode fazer com seu Firefox.
 
+
 ;You're not on the latest version of Firefox. <a href="%s">Upgrade today</a> to get the best of the Web!
 Você não está usando versão mais recente do Firefox. <a href="%s">Atualize hoje</a> e aproveite o máximo da Web!
+
 
 ;Get the latest Firefox features first in <a href="%s">Aurora</a>.
 Use as funcionalidades mais recentes do Firefox primeiro no <a href="%s">Aurora</a>.
 
+
 ;Get a sneak preview of the future of Firefox. <a href="%s">Download Firefox Aurora</a> and test the latest features.
 Dê uma espiada no futuro do Firefox. <a href="%s">Baixe o Firefox Aurora</a> e teste os novos recursos.
+
 
 ;Before Firefox there's Beta, and before Beta there's Aurora. <a href="%s">Try Firefox Aurora</a> now for the latest cutting edge features.
 Antes do Firefox há o Beta, e antes do Beta, o Aurora. <a href="%s">Experimente o Firefox Aurora</a> com os recursos mais recentes.
 
+
 ;<a href="%s">Become a Firefox Affiliate</a> and get everything you need to share Firefox with the world!
 <a href="%s">Torne-se um Afiliado Firefox</a> e tenha tudo que você precisa para compartilhar o Firefox com o mundo!
+
 
 ;Firefox is proudly non-profit and free to innovate on your behalf without compromise. <a href="%s">Learn more</a> about our mission.
 Firefox é orgulhosamente sem fins lucrativos e livre para inovar em seu nome. <a href="%s">Saiba mais</a> sobre a nossa missão.
 
+
 ;Fast, flexible and secure, Firefox is the only browser that puts you first. <a href="%s">Learn more</a> about what makes us different by design.
 Rápido, flexível e seguro, o Firefox é o único navegador que coloca você em primeiro lugar. <a href="%s">Saiba mais</a> sobre o que nos torna diferentes desde o projeto.
+
 
 ;<a href="%s">Download Firefox on your Android tablet</a> and put the power of the Web right in your hands. Get it now.
 <a href="%s">Baixe o Firefox no seu tablet Android</a> e coloque o poder da Web direto em suas mãos. Não perca tempo.
 
+
 ;Keep your plugins up to date and stay safe online with <a href="%s">Plugin Check</a>.
 Mantenha seus plugins atualizados e mantenha sua segurança on-line com a <a href="%s">Verificação de plugins</a>.
+
 
 ;Keep your Firefox in style. Dress it up in the latest <a href="%s">Personas</a>.
 Deixe o Firefox do seu jeito. Vista-o com as mais recentes <a href="%s">Personas</a>.
 
+
 ;Too many tabs? Reclaim your browser from the clutter with <a href="%s">Panorama</a>.
 Muitas abas? Acabe com a bagunça com o <a href="%s">Panorama</a>.
+
 
 ;No two Firefox users are alike. <a href="%s">Add any button to your browser</a> or remove the ones you don't use. Right-click on home and select Customize.
 Nenhum usuário do Firefox é igual ao outro. <a href="%s">Adicione qualquer botão ao seu navegador</a> ou remova aqueles que você não usa. Clique com o botão direito no botão página inicial e selecione Personalizar.
 
+
 ;Dress up your Firefox with Personas. Roll over to try, click to apply. Or visit the <a href="%s">gallery</a> for thousands more!
 Vista seu Firefox com Personas. Aponte para experimentar, clique para aplicar. Ou visite a <a href="%s">galeria</a> para outros milhares de designs!
+
 
 ;Get a first look at the latest features, even before they go to Beta. <a href="%s">Download Firefox Aurora.</a>
 Dê uma olhada nos recursos mais recentes, antes mesmo de irem pro Beta. <a href="%s">Baixe o Firefox Aurora.</a>
 
+
 ;<a href="%s">Download Firefox Aurora</a> to test features and help us determine what makes it to Beta.
 <a href="%s">Baixe o Firefox Aurora</a> para testar novos recursos e nos ajudar a determinar o que formará o Beta.
+
 
 ;Get in early and help shape the future of Firefox. <a href="%s">Download Firefox Aurora.</a>
 Tenha antes e ajude a moldar o futuro do Firefox. <a href="%s">Baixe o Firefox Aurora.</a>
 
+
 ;Firefox for Android is now optimized for the way you browse on tablets. <a href="%s">Get the power of the Web at your fingertips</a>.
 O Firefox para Android agora está otimizado para a sua forma de navegar em tablets. <a href="%s">Tenha o poder da Web na ponta dos seus dedos</a>.
+
 
 ;Download Firefox on your Android tablet and put the power of the Web right in your hands. <a href="%s">Get it now</a>.
 Baixe o Firefox no seu tablet Android e coloque o poder da Web direto em suas mãos. <a href="%s">Baixe agora</a>.
 
+
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
 <a href="%">Baixe o Firefox Beta</a>, envie suas opiniões e ajude a tornar o próximo Firefox ainda mais incrível para nossos 450 milhões de usuários.
+
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
 Teste recursos, apare arestas e nos ajude a tornar nossa próxima versão melhor do que nunca. <a href="%">Baixe o Firefox Beta hoje!</a>
 
+
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
 Você ama o Firefox? Quer ajudar a tornar nossa próxima versão ainda melhor? <a href="%">Baixe o Firefox Beta</a> e mande a sua opinião!
+
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
 Você está usando o Beta mais recente? <a href="%">Baixe-o agora</a> e ajude a testar o recursos mais recentes.
 
+
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
 Não está usando o Beta mais recente? <a href="%">Baixe-o hoje</a> para ficar por cima do que estamos trabalhando para a nossa próxima versão.
+
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
 Quer compartilhar a sua opinião? <a href="%">Descubra como</a> e ajude a tornar a próxima versão do Firefox ainda mais incrível.
 
+
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
 Usuários do Firefox Beta: não se esqueçam de <a href="%">mandar suas opiniões</a> para ajudar nos últimos retoques da nossa próxima versão.
+
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
 Ajude a tornar a próxima versão do Firefox ainda mais incrível. <a href="%">Torne-se um Afiliado</a> e compartilhe o Firefox Beta com seus amigos.
 
+
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 Convide amigos pra pré-visualizar os recursos do Firefox que estão por vir. <a href="%">Torne-se um Afiliado</a> e compartilhe o Firefox Aurora hoje.
+
+
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
 
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Pesquise por tweets, amigos ou assustos do momento direto do campo de pesquisa. Clique no ícone do campo de pesquisas no canto superior direito e selecione Twitter.
 
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Grandes prêmios! Jurados de Hollywood! Exclamações! <a href="%">Entre no Firefox Flicks</a>, o concurso global de vídeos para contar nossa história, ou vote nos seus favoritos!
+
 
