--- a/sq/snippets.lang
+++ b/sq/snippets.lang
@@ -116,5 +116,12 @@ Ndihmoni që të bëhet edhe më i mahnitshëm versioni pasues i Firefox-it. <a 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 Ftoni miq tuajt të marrin një ide mbi veçoritë e ardhshme të Firefox-it. <a href="%">Bëhuni një Përhapës</a> dhe ndajeni Firefox Aurora-n që sot me të tjerët.
 
+
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Çmime të vyera! Anëtarë jurie nga Hollivudi! Pika çuditëse! <a href="%">Merrni Pjesë te Firefox Flicks</a>, një garë mbarëbotërore videosh që të tregojnë historinë tonë, ku mund të votoni për të parapëlqyerën tuaj!
+
+
