--- a/sv-SE/snippets.lang
+++ b/sv-SE/snippets.lang
@@ -116,7 +116,12 @@ Hjälp oss att göra nästa version av Firefox ännu mer fantastisk. <a href="%"
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 Bjud in dina vänner till en förhandstitt på kommande Firefox-funktioner. <a href="%">Bli en samarbetspartner</a> och dela Firefox Aurora idag.
 
-;Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
+
+;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 Fantastiska priser! Hollywooddomare! Utropstecken! <a href="%">Anmäl dig till Firefox Flicks</a>, den globala videotävlingen, med din film som berättar om oss – eller rösta på dina favoriter!
+
+
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
