--- a/de/snippets.lang
+++ b/de/snippets.lang
@@ -117,8 +117,11 @@ Helfen Sie dabei, die nächste Firefox-Version noch wunderbarer zu machen. <a hr
 Laden Sie Freunde ein, sich vorab die künftigen Firefox-Versionen anzusehen. <a href="%">Werden Sie Partner</a> und geben Sie heute Firefox Aurora weiter.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Tolle Preise! Hollywood-Richter! Ausrufezeichen! <a href="%">Machen Sie mit bei Firefox Flicks</a>, dem weltweiten Videowettbewerb, um unsere Geschichte zu erzählen, oder stimmen Sie für Ihre Favoriten ab!
+
 
