--- a/eo/snippets.lang
+++ b/eo/snippets.lang
@@ -117,3 +117,7 @@ Helpu igi la venontan version de Firefox eĉ pli mirinda. <a href="%">Iĝu kunla
 Invitu geamikojn provi estontajn trajtojn de Firefox. <a href="%">Iĝu kunlaboranto</a> kaj dividu Firefox Aurora hodiaŭ.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
