--- a/es-AR/snippets.lang
+++ b/es-AR/snippets.lang
@@ -117,3 +117,7 @@ Ayudanos a hacer que la próxima versión de Firefox sea aún más impresionante
 Invitá a tus amigos a probar las próximas funcionalidades de Firefoxs. <a href="%">Convertite en afiliado</a> y compartí Firefox Aurora.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
