--- a/es-ES/snippets.lang
+++ b/es-ES/snippets.lang
@@ -117,10 +117,15 @@ Haz que la próxima versión de Firefox sea incluso más alucinante. <a href="%"
 Invita a tus amigos a que vean las características que tendrá Firefox en el futuro. <a href="%">Conviértete en simpatizante</a> y comparte Firefox Aurora hoy.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Busca tuits, amigos o temas del momento desde la barra de búsquedas. Haz clic en el icono de búsqueda, en la parte superior derecha de Firefox, y selecciona Twitter.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}¡Grandes premios! ¡Un jurado de estrellas de Hollywood! ¡<a href="%">Participa en Firefox Flicks</a>, el concurso mundial de vídeos para contar nuestra historia, o vota a tus favoritos!
+
 
