--- a/fr/snippets.lang
+++ b/fr/snippets.lang
@@ -117,6 +117,11 @@ Aidez-nous à améliorer la prochaine version de Firefox. <a href="%">Rejoignez 
 Invitez vos amis à découvrir en avant-première les futures fonctionnalités de Firefox. <a href="%">Rejoignez notre programme d'affiliation</a> et partagez Firefox Aurora autour de vous.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Des grands prix&nbsp;! Des juges hollywoodiens&nbsp;! Des points d'exclamation&nbsp;! Participez à <a href="%">Firefox Flicks</a>, le concours vidéo mondial pour raconter notre histoire, ou votez pour vos vidéos préférées&nbsp;!
+
 
