--- a/he/snippets.lang
+++ b/he/snippets.lang
@@ -117,3 +117,7 @@ Firefox לאנדרואיד עכשיו מותאם היטב לדרך שבה אתם
 הזמינו חברים לתצוגה מקדימה של התכונות העתידיות של Firefox. <a href="%">הפכו לשותפים</a> ושתפו את Firefox Aurora עוד היום.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
