--- a/ja/snippets.lang
+++ b/ja/snippets.lang
@@ -117,10 +117,15 @@ Help make the next version of Firefox even more awesome. <a href="%">Become an A
 Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}ツイート、友人、旬の話題を検索バーから直接検索できます。Firefox の画面右上にある検索エンジンのアイコンをクリックして Twitter を選ぶだけです。
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}素晴らしい賞品とハリウッドで活躍する審査員がお待ちしています！ Firefox をテーマとしたグローバルなビデオコンテスト「<a href="%">Firefox Flicks</a>」応募受付中。気に入った作品に投票もできます！
+
 
