--- a/ko/snippets.lang
+++ b/ko/snippets.lang
@@ -92,21 +92,32 @@ Firefox 안드로이드 버전은 여러분의 태블릿에 최적화 되어 있
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
 Firefox를 사랑하신다면 다음 버전에 도움을 주실 수 있습니다. <a href="%">Firefox Beta 다운로드</a> 후 사용 의견을 보내주십시오!
 
+
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
 최신 Firefox 베타를 실행 중이신가요? <a href="%">지금 다운로드</a>하셔서 새 기능을 미리 맛보세요.
+
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
 최신 Firefox Beta를 사용하지 않으시나요? <a href="%">지금 다운로드</a>하셔서 다음 버전에 있는 새 기능을 미리 맛보세요.
 
+
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
 여러분의 의견을 공유하시겠습니까? <a href="%">간단한 방법</a>으로 여러분의 생각을 전달하실 수 있습니다.
 
+
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox 사용자 여러분! <a href="%">여러분의 의견</a>을 보내 주시면 다음 버전에서 더 멋진 브라우저를 만들어 드립니다. 
+Firefox 사용자 여러분! <a href="%">여러분의 의견</a>을 보내 주시면 다음 버전에서 더 멋진 브라우저를 만들어 드립니다.
+
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
 Firefox 다음 버전을 위해 도움을 주십시오. <a href="%">Firefox 제휴 사이트</a>를 통해 Firefox Beta 버전을 알릴 수 있습니다.
 
+
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 친구에게 Firefox의 새로운 기능을 알려주세요. <a href="%">Firefox 제휴 사이트</a>를 통해 Firefox Aurora 버전을 알릴 수 있습니다.
+
+
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
 
