--- a/lv/snippets.lang
+++ b/lv/snippets.lang
@@ -117,3 +117,7 @@ Palīdzi padarīt nākamo Firefox versiju vēl superīgāku. <a href="%">Kļūst
 Uzaicini draugus ievērtēt jaunās Firefox iespējas. <a href="%">Kļūsti par izplatītāju</a> un dalies ar Firefox Aurora.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
