--- a/ru/snippets.lang
+++ b/ru/snippets.lang
@@ -116,6 +116,12 @@ Firefox для Android теперь оптимизирован для работ
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 Пригласите друзей на предпросмотр будущих возможностей Firefox. <a href="%">Станьте нашим помощником</a> и поделитесь Firefox Aurora прямо сейчас.
 
+
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Великолепные призы! Судьи из Голливуда! Восклицательные знаки! <a href="%">Примите участие в Firefox Flicks</a>, глобальном конкурсе видео, чтобы рассказать нашу историю, или проголосовать за любимые видео!
+
 
