--- a/sl/snippets.lang
+++ b/sl/snippets.lang
@@ -117,10 +117,15 @@ Pomagajte nam, da bo naslednji Firefox še bolj super. <a href="%">Postanite Zav
 Povabite znance, da si ogledajo najnovejše funkcije v Firefoxu. <a href="%">Postanite Zaveznik Firefoxa</a> in začnite širiti Firefox Aurora.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
 ;{l10n-extra}Search Tweets, friends or trending topics right from the search bar. Click on the search icon in the top right of Firefox and select Twitter.
 {l10n-extra}Iščite po twitih, med prijatelji in novimi temami v vrstici za iskanje. Kliknite v Firefoxu desno zgoraj na ikono za iskanje in izberite Twitter.
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
 {l10n-extra}Lepe nagrade! Sodniki iz Hollywooda! Klicaji! <a href="%">Sodelujte v Firefox Flicks</a>, v svetovnem nagradnem tekmovanju s svojo zgodbo, ali pa glasujte za svoje favorite!
+
 
