--- a/sr/snippets.lang
+++ b/sr/snippets.lang
@@ -117,3 +117,7 @@ Help make the next version of Firefox even more awesome. <a href="%">Become an A
 Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
 
 
+;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+
+
