--- a/eo/snippets.lang
+++ b/eo/snippets.lang
@@ -118,6 +118,6 @@ Invitu geamikojn provi estontajn trajtojn de Firefox. <a href="%">Iĝu kunlabora
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Ĉu vi uzas Firefox en pluraj komputiloj? Vi povas nun speguli viajn aldonaĵojn inter ili ĉiuj. <a href="%">Lernu pli pri la ŝalto de Speguli (Sync).</a>
 
 
