--- a/eo/newsletter.lang
+++ b/eo/newsletter.lang
@@ -114,7 +114,7 @@ Firefox troveblas ankaŭ en viaj plej ŝatataj sociaj retejoj.  Kontaktu nin kaj
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Administri viajn <span>abonojn al novaĵleteroj</span>
 
 
 ;Subscribe
@@ -126,7 +126,7 @@ Malaboni
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Marku tion ĉi se vi ŝatus ne ricevi mesaĝojn de Mozilla
 
 
 ;Remove me from all Mozilla emails
