Added new German strings for snippets.lang & newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103491 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -114,7 +114,7 @@ Firefox ist auch auf Ihren sozialen Lieblingsnetzwerken. Setzen Sie sich mit uns
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Verwalten Sie Ihre <span>Newsletter-Abonnements</span>
 
 
 ;Subscribe
@@ -126,7 +126,7 @@ Abonnement entfernen
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Aktivieren Sie dieses Kontrollkästchen, um sich aus allen Mozilla-E-Mail-Listen auszutragen
 
 
 ;Remove me from all Mozilla emails
