--- a/de/snippets.lang
+++ b/de/snippets.lang
@@ -118,7 +118,7 @@ Laden Sie Freunde ein, sich vorab die künftigen Firefox-Versionen anzusehen. <a
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Verwenden Sie Firefox auf mehreren Rechnern? Jetzt können Sie Ihre Add-ons zwischen allen synchronisieren. <a href="%">Erfahren Sie, wie Sie Sync aktivieren können.</a>
 
 
 ;{l10n-extra}Great prizes! Hollywood judges! Exclamation marks! <a href="%">Enter Firefox Flicks</a>, the global video contest to tell our story, or vote for your favorites!
