l10n:lij new string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103495 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -114,7 +114,7 @@ O Firefox o l'é ascì o nòstro scîto de social network. Conétite con niâtri
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Gestìsci e teu <span>Iscriçioìn a-e Newsletter</span>
 
 
 ;Subscribe
@@ -126,7 +126,7 @@ Scancéllime
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Véddi chi se t'eu êse scancelòu da tùtte-e email do Mozilla
 
 
 ;Remove me from all Mozilla emails
