--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -118,6 +118,6 @@ Invîta i amîxi a védde in antìçipo i megiorménte do Firefox. <a href="%">D
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+T'adêuvi o Firefox in tànti computer? Òua ti peu sincronizâ i teu conponénti azónti in sci mæximi. <a href="%">Mîa chi cómme ativâ o Sync.</a>
 
 
