--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -114,7 +114,7 @@ Firefox er einnig á félagsnetum. Kíktu á okkur og taktu þátt í samræðun
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Breyttu <span>áskriftum að fréttabréfum</span>
 
 
 ;Subscribe
@@ -126,7 +126,7 @@ Hætta í áskrift
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Hakaðu við hér ef þú vilt ekki fá neinn póst frá Mozilla
 
 
 ;Remove me from all Mozilla emails
