l10n: fr, newsletter update
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103502 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/newsletter.lang
+++ b/fr/newsletter.lang
@@ -102,38 +102,38 @@ Journal des bêtas
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Découvrez toutes les nouveautés à venir de Firefox dans ses déclinaisons classque et mobile.
+Découvrez toutes les nouveautés à venir de Firefox dans ses déclinaisons classique et mobile.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Soyons amis&nbsp;!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox est aussi présent sur vos réseaux sociaux favoris. Contactez-nous et restons en contact.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Gérer vos <span>abonnements</span>
 
 
 ;Subscribe
-Subscribe
+Inscription
 
 
 ;Unsubscribe
-Unsubscribe
+Désinscription
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Cocher la case su vous désirez vous désinscrire de toutes les lettres d'information de Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Me désinscrire de toutes les lettres d'information de Mozilla
 
 
 ;Save Preferences
-Save Preferences
+Enregistrer les préférences
 
 
