l10n: add newsletter center change confirm string
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103506 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cs/newsletter.lang
+++ b/cs/newsletter.lang
@@ -137,3 +137,7 @@ Zrušit odběr všech e-mailů od Mozilly
 Uložit předvolby
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
