--- a/da/newsletter.lang
+++ b/da/newsletter.lang
@@ -137,3 +137,7 @@ Afmeld mig alle Mozillas mails
 Gem præferencer
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
