--- a/en-GB/newsletter.lang
+++ b/en-GB/newsletter.lang
@@ -123,3 +123,6 @@ Remove me from all Mozilla emails
 
 ;Save Preferences
 Save Preferences
+
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
