--- a/eo/newsletter.lang
+++ b/eo/newsletter.lang
@@ -137,3 +137,7 @@ Forigi min el la retmesaĝoj de Mozilla
 Konservi preferojn
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
