--- a/es-AR/newsletter.lang
+++ b/es-AR/newsletter.lang
@@ -137,3 +137,7 @@ Quitarme de todos los correos de Mozilla
 Guardar las preferencias
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
