--- a/fr/newsletter.lang
+++ b/fr/newsletter.lang
@@ -137,3 +137,7 @@ Me désinscrire de toutes les lettres d'information de Mozilla
 Enregistrer les préférences
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
