--- a/hu/newsletter.lang
+++ b/hu/newsletter.lang
@@ -137,3 +137,7 @@ Leiratkozás az összes Mozilla e-mailről
 Beállítások mentése
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
