--- a/is/newsletter.lang
+++ b/is/newsletter.lang
@@ -137,3 +137,7 @@ Fjarlægja mig úr öllum pósti frá Mozilla
 Vista stillingar
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
