--- a/lij/newsletter.lang
+++ b/lij/newsletter.lang
@@ -137,3 +137,7 @@ Lévime da tùtte e email de Mozilla
 Sàrva Preferénse
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
