--- a/nl/newsletter.lang
+++ b/nl/newsletter.lang
@@ -137,3 +137,7 @@ Mij van alle e-mail van Mozilla verwijderen
 Voorkeuren opslaan
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
