--- a/ru/newsletter.lang
+++ b/ru/newsletter.lang
@@ -137,3 +137,7 @@ Check here if you’d like to be removed from all Mozilla emails
 Сохранить настройки
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
