--- a/sl/newsletter.lang
+++ b/sl/newsletter.lang
@@ -137,3 +137,7 @@ Odjavi me od vseh naročnin pri Mozilli
 Shrani nastavitve
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
