--- a/sv-SE/newsletter.lang
+++ b/sv-SE/newsletter.lang
@@ -137,3 +137,7 @@ Ta bort mig från alla Mozillas e-brev
 Spara inställningarna
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
