--- a/de/newsletter.lang
+++ b/de/newsletter.lang
@@ -137,3 +137,7 @@ Trage mich aus allen Mozilla-E-Mail-Listen aus
 Einstellungen speichern
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
