--- a/hr/newsletter.lang
+++ b/hr/newsletter.lang
@@ -137,3 +137,7 @@ Ukloni me sa svih popisa primatelja e-pošte
 Spremi postavke
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
