--- a/hy-AM/newsletter.lang
+++ b/hy-AM/newsletter.lang
@@ -137,3 +137,7 @@ Check here if you’d like to be removed from all Mozilla emails
 Պահպանել կարգավորումները
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
