--- a/zh-TW/newsletter.lang
+++ b/zh-TW/newsletter.lang
@@ -137,3 +137,7 @@ Check here if you’d like to be removed from all Mozilla emails
 儲存偏好設定
 
 
+;Thanks for updating your email preferences.
+Thanks for updating your email preferences.
+
+
