l10n: fr, updated newsletter file
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@103509 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/fr/newsletter.lang
+++ b/fr/newsletter.lang
@@ -126,7 +126,7 @@ Désinscription
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Cocher la case su vous désirez vous désinscrire de toutes les lettres d'information de Mozilla
+Cocher la case si vous désirez vous désinscrire de toutes les lettres d'information de Mozilla
 
 
 ;Remove me from all Mozilla emails
@@ -138,42 +138,43 @@ Enregistrer les préférences
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Merci d'avoir mis à jour vos préférences de réception du courrier.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Vous avez été désinscrit.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Nous sommes désolés de vous voir partir. Pouvez-vous nous dire pourquoi vous vous désinscrivez&nbsp;?
 We’re sorry to see you go. Would you mind telling us why you’re leaving?
 
 
 ;You send too many emails.
-You send too many emails.
+VOus envoyez trop de courriels.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Le contenu ne me concernait pas.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+La lettre était visiuellement pénible à lire.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Je ne m'étais pas inscrit à cette lettre.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Je suis déjà les nouvelles concernant Mozilla sur Facebook et Twitter.
 
 
 ;Submit
-Submit
+Envoyer
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
+Merci de nous dire pourquoi vous vous désinscrivez.
 
 
